--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,11 @@ main{
     justify-content: center;
     align-items: center;
 }
+
+footer {
+  background-color: #00515c;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  margin-top: 40px;
+}
